# SLIDE_py

./: .gitignore  .gitmodules  SLIDE_PYTHON_IMPLENTATION_PLAN.md  debug_knockpy.py  debug_knockpy2.py  debug_knockpy3.py  pyproject.toml
.github/workflows/: python-publish.yml
comparison/: .gitignore  BUILD_CHECK_README.md  DIVERGENCE_ANALYSIS.md  KNOCKOFF_COMPARISON.md  KNOCKOFF_R_COMPATIBILITY.md  PLAN.md  README.md  build_check_config.yaml  compare_full.py  compare_latent_factors.py  compare_outputs.py  comparison_7263197_1.err  comparison_config.yaml  comparison_config_binary.yaml  comparison_config_binary_fdr01.yaml  comparison_config_continuous.yaml  comparison_report_7263198.err  comparison_report_7263203.err  extract_r_performance.R  r_rng.py  run_build_check.sh  run_comparison.sh  run_knockoff_comparison.py  run_knockoff_comparison.sh  run_knockoff_comparison_v2.py  run_knockoffs_on_precomputed.py  run_report.sh  run_slide_R.R  run_slide_fixed.sbatch  run_slide_py.py  submit_build_check.sh  submit_comparison.sh  submit_knockoff_v2.sh  submit_knockoffs_precomputed.sh  test_knockoffs_multiple_z.py  validate_build.py
comparison/diagnostics/: compare_love_diagnostics.py  compare_step_by_step.py  compare_w_statistics.py  compare_w_statistics_all.py  debug_glmnet_coefficients.py  debug_knockoff_entry_times.py  debug_w_stats.py  debug_w_stats_r.R  love_diagnostics_py.py  love_diagnostics_r.R  run_debug_glmnet.sh  run_diagnostics.sh  run_w_stat_comparison.sh  save_r_intermediate.R  test_knockpy.py  test_r_glmnet_behavior.py  test_r_knockoff_stat.R  test_standardization_diff.py
comparison/knockoff_eval_20260125/: knockoff_results_R_knockoffs_py_sklearn.json  knockoff_results_R_knockoffs_py_stats.json  knockoff_results_R_native.json  knockoff_results_custom_glmnet.json  knockoff_results_knockoff_filter.json  knockoff_results_knockoff_filter_sklearn.json
comparison/knockoff_eval_ssc_binary/: knockoff_results_R_knockoffs_py_sklearn.json  knockoff_results_R_knockoffs_py_stats.json  knockoff_results_R_native.json  knockoff_results_custom_glmnet.json  knockoff_results_knockoff_filter.json  knockoff_results_knockoff_filter_sklearn.json
comparison/output_comparison/SSc_binary_comparison/Py_pyLOVE_pyKO/: params.yaml
comparison/output_comparison/SSc_binary_comparison/Py_rLOVE_pyKO/: params.yaml
comparison/output_comparison/SSc_continuous_comparison/Py_pyLOVE_pyKO/: params.yaml
comparison/output_comparison/SSc_continuous_comparison/Py_rLOVE_pyKO/: params.yaml
comparison/output_comparison/SSc_continuous_comparison/R_native/: params.yaml
comparison/updated_outputs/Py_pyLOVE_pyKO/: params.yaml
comparison/updated_outputs/Py_pyLOVE_pyKO/0.05_1.0_out/: love_result.pkl
comparison/updated_outputs/Py_pyLOVE_pyKO/0.1_0.1_out/: love_result.pkl
comparison/updated_outputs/Py_pyLOVE_pyKO/0.1_0.5_out/: love_result.pkl
comparison/updated_outputs/Py_pyLOVE_pyKO/0.1_1.0_out/: love_result.pkl
comparison/updated_outputs/Py_pyLOVE_rKO/: params.yaml
comparison/updated_outputs/Py_rLOVE_pyKO/: params.yaml
comparison/updated_outputs/Py_rLOVE_rKO/: params.yaml
comparison/updated_outputs/R_native/: binary_y_mapping.rds  params.yaml
comparison/w_stat_comparison_20260125/: w_statistics_comparison.json
docs/: KNOCKPY_INTEGRATION_PLAN.md
src/loveslide/: knockoffs.py  love.py  score.py  slide.py  tools.py
src/loveslide/Py_LOVE/: setup.py
src/loveslide/knockoff/: __init__.py  solve.py
src/loveslide/knockoff/_vendor/glmnet/: README.md  __init__.py  linear.py  logistic.py  meson.build
src/loveslide/pydsdp_ext/: __init__.py  convert.py  dsdp5.py
(+287 files in other folders)
