[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "loveslide"
version = "0.1.0"
authors = [
  { name="Ally Wang", email="alw399@pitt.edu" },
  { name="Swapnil Keshari", email="swk25@pitt.edu" },
]
description = "Python implementation of SLIDE (LOVE + Knockoffs)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    # Core scientific computing
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "pandas>=2.0.0",
    "joblib>=0.14.1",

    # SDP solver (pure Python fallback for knockoffs)
    "cvxpy>=1.3.0",

    # Progress bars and parallelization
    "tqdm>=4.60.0",
    "pqdm",
    "enlighten",

    # Visualization
    "matplotlib>=3.7.0",
    "altair>=5.0.0",
    "adjustText>=1.0.0",
    "wordcloud",
    "pysankeybeta",

    # Single-cell analysis
    "scanpy>=1.10.0",
    "anndata>=0.10.0",
    "magic-impute",

    # Deep learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pyro-ppl",

    # Graph analysis
    "networkx>=3.0.0",
    "python-igraph>=0.10.0",

    # Genomics
    "genomepy>=0.16.0",
    "goatools>=1.4.0",
    "h5py>=3.8.0",
    "pyarrow>=12.0.0",

    # Other utilities
    "numba>=0.57.0",
    "pysal>=24.1",
    "certifi>=2024.0.0",
    "group-lasso",
    "easydict",
    "ipykernel",
    "shiny>=0.6.0",
    "commot",
    "pytest>=7.0.0",
]

[project.optional-dependencies]
r = [
    "rpy2>=3.5.0",
]
full = [
    "rpy2>=3.5.0",
    "seaborn>=0.12.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"loveslide.knockoff._vendor" = ["**/*"]
"loveslide.pydsdp_ext" = ["*.so", "dsdp/**/*"]

[project.urls]
Homepage = "https://github.com/alw399/SLIDE_py"
Issues = "https://github.com/alw399/SLIDE_py/issues"
